--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #62f0ff;
+		background: #55f2fc;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
