--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4007,10 +4007,10 @@ div {
 	}
 
 	body.is-mobile.landing #footer {
-		background-color: #1d242a;
+		background-color: #38d1cf;
 	}
 body {
-  background-color: #3bb2b8;
+  background-color: #2df0fa;
   background: linear-gradient(
     25deg,
     rgba(66, 230, 149, 1),
